# dose

./: .gitignore  Cargo.toml  README.md
.github/workflows/: publish.yml
ci/: publish.sh
dose-derive/: Cargo.toml
dose-derive/src/: lib.rs
src/: context.rs  lib.rs  macros.rs
tests/: base.rs  can_resolve_with_context.rs  generic_output.rs  no_singleton_different_instance.rs  singleton_same_instance.rs
