[package]
name = "dose"
version = "0.1.2"
edition = "2021"
description = "Your daily dose of structs and functions."
license = "GPL-3.0-only"

[workspace]
members = [
    "dose-derive",
]

[dependencies]
dose-derive = { version = "0.1.2", path = "./dose-derive" }
log = "0.4.0"

[dev-dependencies]
fake = "2.4"
rand = "0.8"
