[package]
name = "dose"
version = "0.1.3"
edition = "2021"
repository = "https://github.com/noostech/dose"
description = "Your daily dose of structs and functions."
license = "GPL-3.0-only"
readme="README.md"
keywords = ["dependency", "injection", "static", "resolver", "provider"]
categories = ["development-tools::testing"]

[workspace]
members = [
    "dose-derive",
]

[dependencies]
dose-derive = { version = "0.1.3", path = "./dose-derive" }
log = "0.4.0"

[dev-dependencies]
fake = "2.4"
rand = "0.8"
